Left and right paddles are now both controllable and updated on both players browsers. Very much needs a refactoring....desperately...

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </form>
 	</body>
         <script type="text/javascript" src="http://127.0.0.1:4000/socket.io/socket.io.js"></script>
-        <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.1.js"></script>
+        <script type="text/javascript" src="client/jquery-1.7.2.min.js"></script>
         <script type="text/javascript" src="client/init.js"></script>
         <script type="text/javascript" src="client/players.js"></script>
         <script type="text/javascript" src="client/pong.js"></script>
