--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <button id="addName">add</button>
         </form>
 	</body>
-        <script type="text/javascript" src="http://sol.local:4000/socket.io/socket.io.js"></script>
+        <script type="text/javascript" src="http://127.0.0.1:4000/socket.io/socket.io.js"></script>
         <script type="text/javascript" src="client/jquery-1.7.2.min.js"></script>
         <script type="text/javascript" src="client/init.js"></script>
         <script type="text/javascript" src="client/players.js"></script>
